docs: fix typo in documentation
