# user-service/docs/swagger.json
@@ -243,10 +243,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "No Content",
-                        "schema": {
-                            "$ref": "#/definitions/swagger.DeletedResponse"
-                        }
+                        "description": "No Content"
                     },
                     "404": {
                         "description": "Not Found",
@@ -283,6 +280,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Product Ids",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/swagger.AssignProductsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -306,6 +312,20 @@
         }
     },
     "definitions": {
+        "swagger.AssignProductsRequest": {
+            "type": "object",
+            "properties": {
+                "product_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "550e8400-e29b-41d4-a716-446655440000"
+                    ]
+                }
+            }
+        },
         "swagger.AttributeResponse": {
             "type": "object",
             "properties": {
@@ -362,18 +382,6 @@
                 },
                 "meta": {
                     "$ref": "#/definitions/swagger.MetaCreated"
-                }
-            }
-        },
-        "swagger.DeletedResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "string",
-                    "example": "null"
-                },
-                "meta": {
-                    "$ref": "#/definitions/swagger.Meta"
                 }
             }
         },
