# user-service/internal/http/handler/user-handler.go
@@ -172,7 +172,7 @@ func (r *UserHandler) UpdateUser(c echo.Context) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "User ID"
-// @Success 204 {object} swagger.DeletedResponse
+// @Success 204 "No Content"
 // @Failure 404 {object} swagger.NotFoundResponse
 // @Failure 500 {object} swagger.InternalServerErrorResponse
 // @Router /users/{id} [delete]
@@ -195,6 +195,7 @@ func (r *UserHandler) DeleteUser(c echo.Context) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "User ID"
+// @Param user body swagger.AssignProductsRequest true "Product Ids"
 // @Success 204 "No Content"
 // @Failure 404 {object} swagger.NotFoundResponse
 // @Failure 500 {object} swagger.InternalServerErrorResponse
