# user-service/pkg/swagger/swagger_request.go
@@ -15,3 +15,7 @@ type UpdateUserRequest struct {
 	RoleID   string `json:"role_id" example:"550e8400-e29b-41d4-a716-446655440000"`
 	StatusID string `json:"status_id" example:"123e4567-e89b-12d3-a456-426614174000"`
 }
+
+type AssignProductsRequest struct {
+	ProductIds []string `json:"product_ids" example:"550e8400-e29b-41d4-a716-446655440000"`
+}
